--- a/learn-rails/README.rdoc
+++ b/learn-rails/README.rdoc
@@ -6,6 +6,7 @@ application up and running.
 Things you may want to cover:
 
 * Ruby version
+    This application was built using: Ruby 2.3.0 and Rails 4.2.5
 
 * System dependencies
 
